# tiny-media-server

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: ffmpeg.rs  main.rs  media.rs
templates/: index.html.tera  player.html.tera
