[package]
name = "tiny-media-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "serde_json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
walkdir = "2.3.2"
