[package]
name = "tiny-media-server"
version = "0.1.0"
description = "media server for your videos"
license = "MIT"
edition = "2021"

keywords = ["media-server", "video", "web-server", "rocket"]
categories = ["command-line-utilities", "multimedia::video"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "serde_json"] }
rocket-include-tera = "0.5.4"
tokio = { version = "1.22.0", default-features = false, features = ["net", "process"] }
walkdir = "2.3.2"
